# meson-build-testing

./: README.md  meson.build  pyproject.toml
meson_build_testing/src/: our_first_project.c
