[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'meson_build_testing'
version = '0.0.1'
description = 'Python project using meson-python!'
readme = 'README.md'
requires-python = '>=3.8'
license = { file = 'LICENSE' }
authors = [{ name = 'Bowsette Koopa', email = 'bowsette@example.com' }]
